styled slides, fixes to alignment done

--- a/ind-styles.css
+++ b/ind-styles.css
@@ -96,9 +96,9 @@ body {
         }
         .slide {
             display: flex;
-            flex-direction: row; /* Arrange children in a row */
-            align-items: center; /* Vertically center items */
-            justify-content: center; /* Horizontally center items */
+            flex-direction: row;
+            align-items: center; 
+            justify-content: center; 
             width: 100%;
             height: 100%;
             position: absolute;
@@ -108,20 +108,7 @@ body {
             opacity: 0;
             transition: opacity 0.9s ease-in-out;
         }
-        @media (max-width: 480px) {
-            .slide{
-                display: flex;
-            flex-direction: row; 
-            align-items: center; 
-            justify-content: center; 
-            width: 100%;
-            height: 100%;
-            position: relative;
-            font-size: 12px;
-            opacity: 0;
-            transition: opacity 0.9s ease-in-out;
-            }
-        }
+    
         .homeslides{
             background-color: #da974f;
             padding: 5%;
@@ -162,6 +149,49 @@ body {
         .next {
             right: 10px;
         }
+        .simg{
+            height: 50rem;
+            width: 30rem;
+        }
+        /*carousel for responsiveness*/
+        @media (max-width: 768px) {
+            .carousel {
+                height: 70vh; 
+            }
+            .slide {
+                font-size: 20px; 
+                flex-direction: column;
+            }
+            .homeslides {
+                padding: 3%;
+            }
+            .homeslides-imagecontainer img {
+                max-height: 50%;
+                height: 35%; 
+                width: auto;
+            }
+        }
+        
+        @media (max-width: 480px) {
+            .carousel {
+                height: 70vh; 
+            }
+            .slide {
+                font-size: 20px; 
+                flex-direction: column;
+            }
+            .homeslides {
+                padding: 3%;
+            }
+            .homeslides-imagecontainer img {
+                max-height: 50%;
+                height: 35%; 
+                width: auto;
+            }
+        }
+        
+
+
 /*carousel for cards*/
         @keyframes scroll {
             0% {
@@ -189,6 +219,7 @@ body {
         font-size: 16px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         transition: opacity 0.3s ease, transform 0.3s ease;
+        z-index: 9999;
     }
 
 #backToTop:hover {
